--- a/WeatherAUS.ipynb
+++ b/WeatherAUS.ipynb
@@ -780,7 +780,7 @@
    "id": "86b8b7f6",
    "metadata": {},
    "source": [
-    "Se puede observar una diferencia "
+    "Acá obtuvimos el registro de las temperaturas máximas y mínimas de Albury desde el año 2008 hasta el 2017, cabe recalcar que justamenete el primer y último año de registro tiene una cantidad menor de datos que las fechas dentro de ese rango"
    ]
   },
   {
@@ -1180,7 +1180,7 @@
    "id": "1c8e4589",
    "metadata": {},
    "source": [
-    "Acá podemos apreicar que no existe un tipo de relación directa entre la presión registrada a las 3 pm con la humedad por ende establecer relaciones entre ambas no nos sirven para poder predecir alguna de las dos variables"
+    "Acá podemos apreciar que no existe un tipo de relación directa entre la presión registrada a las 3 pm con la humedad por ende establecer relaciones entre ambas no nos sirven para poder predecir alguna de las dos variables"
    ]
   },
   {
